--- a/src/components/Booking/Booking.css
+++ b/src/components/Booking/Booking.css
@@ -137,6 +137,22 @@
   margin: 35px 0;
 }
 
+.plan-icon {
+  color: rgb(211, 59, 80);
+}
+
+.plans-icon {
+  background-color: rgba(211, 59, 79, 0.096);
+  padding: 10px;
+  width: 20%;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .plan-title {
   font-size: 16px;
   margin-bottom: 8px;
