--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -5,9 +5,21 @@
   margin-top: 40px;
 }
 
+.map-responsive {
+  width: 100%;
+}
+
+iframe {
+  width: 100%;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+}
+
 .map-title {
   font-weight: 500;
   font-size: 16px;
+  margin-top: 32px;
 }
 
 .map-desc {
